[ci skip] compute the mean width score 8441c3445f10496aa0f37654c937906dabd6947b

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fe0184e",
+   "id": "9e8de0b2",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da62789a",
+   "id": "7713b0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f70b03a",
+   "id": "c6dabfd9",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0a4c30",
+   "id": "e874388b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad1bc2ce",
+   "id": "4fdde4ac",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d59fc27e",
+   "id": "827a357c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef6aa85",
+   "id": "7e337e22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b54390",
+   "id": "f63c456c",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d8bebf",
+   "id": "edda843f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed7b041",
+   "id": "be331b39",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3d1111",
+   "id": "479582f0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8d6e52",
+   "id": "ac435f0a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9abe49dd",
+   "id": "ebd79325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b97638",
+   "id": "1ddef30c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d00235",
+   "id": "8412850d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56836f52",
+   "id": "2eced4c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c90be2",
+   "id": "d42973d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd4dc0f5",
+   "id": "88eb4bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a4a83e",
+   "id": "0f90279c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "935171aa",
+   "id": "2552d41a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8f7ac2",
+   "id": "3e32d417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a334d6",
+   "id": "531dbaac",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b346f770",
+   "id": "8ebe1c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "049f288d",
+   "id": "5bbf6689",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1660245",
+   "id": "9e018032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bcea87c",
+   "id": "3e9d3024",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15fc0d2b",
+   "id": "0ed3c0d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6848fa1a",
+   "id": "3ffb5760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1e49441",
+   "id": "08b1672e",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a5c6e9",
+   "id": "3d23a097",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e0fbcf",
+   "id": "85182e7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa270223",
+   "id": "cd3ca25b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35cceb77",
+   "id": "c1b5595d",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7df2db",
+   "id": "f5c7be00",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e5e0ca",
+   "id": "944ef0d0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45e8355",
+   "id": "c498a8ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8484f7f3",
+   "id": "82f2f579",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a040749",
+   "id": "b87ff49d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0741ebc2",
+   "id": "c3d21cf6",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f3db2c8",
+   "id": "a7cca284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c11570c6",
+   "id": "5248a8f0",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d6f863",
+   "id": "a0819f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3a85d97",
+   "id": "68695f3a",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ac89ac",
+   "id": "344f7cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bbfe0bf",
+   "id": "d7ef85d5",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43872f9",
+   "id": "d9283843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4e41ea2",
+   "id": "ccae1132",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87294d7",
+   "id": "52d9d6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c02aba",
+   "id": "7ef1acf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62457da",
+   "id": "0ca1e67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb68de2",
+   "id": "3d88bddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc0f606",
+   "id": "d4445df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,10 +1205,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b11c95f0",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "cab11305",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
@@ -1291,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f863980",
+   "id": "b5879f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab705cf",
+   "id": "190c2338",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c8ea179",
+   "id": "0a27f62f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3c1a62",
+   "id": "7e1481ac",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0804658",
+   "id": "41dd425d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e46d58",
+   "id": "33b94eef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c245ebe",
+   "id": "c0d85940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052d6354",
+   "id": "2ed4bf3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2297dd",
+   "id": "ed9c1aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136291a8",
+   "id": "dae282dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282d8f48",
+   "id": "33783a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5147ae14",
+   "id": "dd8485d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bebb7149",
+   "id": "847d3bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63d7ec4d",
+   "id": "b1b1f68f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef60481b",
+   "id": "e4a8a3f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf482968",
+   "id": "3cfb0471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71da09a2",
+   "id": "0789d49f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abeb047",
+   "id": "47b83576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214901ba",
+   "id": "6cb38b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a6b7d6",
+   "id": "096067cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18805a65",
+   "id": "32a133d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915558be",
+   "id": "d3567796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869fd2fe",
+   "id": "16f02fa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "963a1f7f",
+   "id": "ae391a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc2695e",
+   "id": "7ef82eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf0cde0",
+   "id": "b0a03178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48b8d27",
+   "id": "3e515235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b5e788",
+   "id": "4f6561a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5624657",
+   "id": "df8add2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95e74ae8",
+   "id": "4635bb66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "829fe625",
+   "id": "267c4a4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf80eb3",
+   "id": "48a29420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85edb86",
+   "id": "335ca001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd95aeeb",
+   "id": "8c6d0c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b099231c",
+   "id": "b0e9ae69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dff45d3d",
+   "id": "dcc6b8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f2c453",
+   "id": "3825c3ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a0a47d",
+   "id": "794c7dde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b67591",
+   "id": "c4539412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53be77dd",
+   "id": "ce429cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,10 +2234,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3724d9e7",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "bf8b8cdc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -2276,23 +2272,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e751a2",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "71ff8633",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def coverage_score(y_true, y_quantile_low, y_quantile_high):\n",
     "    y_true = np.asarray(y_true)\n",
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
-    "    return np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()"
+    "    return float(\n",
+    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def width_score(y_true, y_quantile_low, y_quantile_high):\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_quantile_low = np.asarray(y_quantile_low)\n",
+    "    y_quantile_high = np.asarray(y_quantile_high)\n",
+    "    return float(np.abs(y_quantile_high - y_quantile_low).mean())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a5ec568",
+   "id": "2ade03af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2309,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0b6fe9",
+   "id": "3f2aef3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width_score(\n",
+    "    targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_05[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_95[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbb50f4a",
    "metadata": {},
    "outputs": [],
    "source": []
