--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eeae683a",
+   "id": "84a2de43",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26832a3",
+   "id": "68aa7c20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f05eb9",
+   "id": "ee91934c",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693a4c95",
+   "id": "c67b5314",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50602834",
+   "id": "93ed1322",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18c5420c",
+   "id": "d1d01d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4ab509",
+   "id": "5bde8a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16763c92",
+   "id": "36ae56c2",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae21410f",
+   "id": "267d9548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce6e3f3d",
+   "id": "e7a84dd3",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18bb536a",
+   "id": "e5cd52f8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc3e141",
+   "id": "a042a16d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4771b7",
+   "id": "99a7c168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691cc0db",
+   "id": "9fe6dd08",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40856670",
+   "id": "63beb534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b8a5a4",
+   "id": "1e781345",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3361b960",
+   "id": "bdf11be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5804afdb",
+   "id": "de37b4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4ae155",
+   "id": "8f3160ec",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d21414",
+   "id": "98b6886e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f097b5",
+   "id": "646153bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35022df2",
+   "id": "bbf8ae01",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4936c8b",
+   "id": "c352532a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88ebcc45",
+   "id": "eaff9e4f",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb82eee",
+   "id": "0fbd3515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd9224c",
+   "id": "90d36e48",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "832bcbbd",
+   "id": "e6be28d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "305da592",
+   "id": "31eae724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826a9816",
+   "id": "eed12e73",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cebccc3",
+   "id": "b339de14",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9aa30d3",
+   "id": "e5f787bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a278bb4",
+   "id": "14d8b8c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9070df6",
+   "id": "12ee41cb",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06665696",
+   "id": "8c72f850",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6221520",
+   "id": "958d84e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13ae6d22",
+   "id": "a0944e1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ee3078",
+   "id": "5297e20b",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778213e7",
+   "id": "5d73ad6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de6279d",
+   "id": "2ad76f1b",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0588a12e",
+   "id": "61c6fdcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13aedc25",
+   "id": "aa88eda2",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba4ead2",
+   "id": "d943d3b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0657143",
+   "id": "5b799093",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8b91b5",
+   "id": "d0800795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba104be",
+   "id": "a4412003",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6945b818",
+   "id": "b37b221d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62941f6",
+   "id": "dc6024ad",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac9a147",
+   "id": "6bd20b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d66072df",
+   "id": "ebe0a0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48d5fbb1",
+   "id": "77332da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf09db9f",
+   "id": "9f731e7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "265de22a",
+   "id": "a5e21262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,10 +1205,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4873a920",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "0d26c4b6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
@@ -1291,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7897fe8",
+   "id": "608929ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e51abf",
+   "id": "cd67d4f3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8da875a",
+   "id": "c8fa3f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15849681",
+   "id": "b3c5dbbc",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be6e3ee",
+   "id": "c123c74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3964068",
+   "id": "ea01360f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaa0636a",
+   "id": "2ac50eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82468c0b",
+   "id": "0fe70048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6cf8555",
+   "id": "d9739fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc4d2b2",
+   "id": "b1beb57c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9711ac47",
+   "id": "a790237b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c3ec5b",
+   "id": "ee379589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56d5e96",
+   "id": "d95a14d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52e94119",
+   "id": "7f0006f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91928080",
+   "id": "043cd746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4383d17",
+   "id": "ddeb248d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4df65d",
+   "id": "9c95fc98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834086ff",
+   "id": "09876d53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10c55da",
+   "id": "69f14610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a07e13",
+   "id": "1e3f21ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91163255",
+   "id": "97b82044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b54ad674",
+   "id": "a9d157ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b3a809",
+   "id": "96dff498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "866ca278",
+   "id": "35f0170b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f2696a0",
+   "id": "ae9d2162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2809458e",
+   "id": "428246e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bc36191",
+   "id": "4e000ab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a66aa2ca",
+   "id": "5c062ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9acf6413",
+   "id": "87e64d31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb17a1b",
+   "id": "6ab1c7c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea36ee7",
+   "id": "b3450c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc873c6b",
+   "id": "d00821a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f64f3ce",
+   "id": "80c4747a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc70038",
+   "id": "8c506735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca9d346",
+   "id": "930e7706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f33e38",
+   "id": "50604839",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17233837",
+   "id": "4f99c366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8377b32",
+   "id": "cc9a6672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a49036",
+   "id": "9475c0fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6560ccc",
+   "id": "286c2439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,10 +2234,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c758f56e",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "20ed6c9f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -2276,23 +2272,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb22195",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "7a975122",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def coverage_score(y_true, y_quantile_low, y_quantile_high):\n",
     "    y_true = np.asarray(y_true)\n",
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
-    "    return np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()"
+    "    return float(\n",
+    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def width_score(y_true, y_quantile_low, y_quantile_high):\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_quantile_low = np.asarray(y_quantile_low)\n",
+    "    y_quantile_high = np.asarray(y_quantile_high)\n",
+    "    return float(np.abs(y_quantile_high - y_quantile_low).mean())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8ebf8f",
+   "id": "f3efb260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2309,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e91029d4",
+   "id": "00fdddb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width_score(\n",
+    "    targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_05[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_95[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a41f04",
    "metadata": {},
    "outputs": [],
    "source": []
